fix: adjust skills header width and alignment for improved layout consistency

--- a/src/app/main-component/skills/skills.component.scss
+++ b/src/app/main-component/skills/skills.component.scss
@@ -316,7 +316,10 @@
 
    .skills-header {
     align-self: flex-end;
-    width: 100%;
+    width: 90%;
+    margin-right: 30px;
+    gap: 20px;
+
   }
 
   .skills-description {
